Fix: bg was flashing visible on map load

--- a/react-app/src/Game.css
+++ b/react-app/src/Game.css
@@ -13,6 +13,10 @@
 	--z-cp: 100;
 }
 
+body {
+	background-color: #333333;
+}
+
 #root {
 	position: relative;
 }
